# neko-manifest-cli

./: Cargo.toml  README.md  a12719b1-f183-493f-95e9-6545b349dc98.json  example.json  index.ts  package.json
src/: downloader.rs  fabric.rs  forge.rs  forgeinstaller.rs  main.rs  mojang.rs  neoforge.rs  types.rs  utils.rs
src/types/: mod.rs
